# routing-rules

./: .gitignore  README.md  anthropic.yaml  clash-party.js  dns-test.py  override.js  pyproject.toml
.github/workflows/: publish-rules.yml
classical/: category-ai-chat-!cn.list  category-ai-chat-!cn.yaml
custom/: category-ai-chat-!cn.yaml  direct.yaml  proxy.yaml
domain/: category-ai-chat-!cn.list  category-ai-chat-!cn.mrs  category-ai-chat-!cn.yaml  direct.list  direct.mrs  direct.yaml  proxy.list  proxy.mrs  proxy.yaml
example/: cfw_parser_remote.yaml
ipcidr/: category-ai-chat-!cn.mrs  category-ai-chat-!cn.yaml
scripts/: download_mihomo.sh  merge_rules.py  split_rules.py
